# pySigma-backend-athena

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/athena/: __init__.py  base.py  correlations.py
sigma/pipelines/athena/: __init__.py  athena.py
tests/: aws-tables.yaml  cloudtail-mapping.yaml  cloudtail.yaml  test_aws_security_lake.py  test_backend_athena.py  test_backend_athena_config.py  test_backend_athena_correlations.py  test_backend_athena_select_fields.py  test_backend_athena_table_name.py  test_ocsf_pipeline.py  test_security_lake_table_names.py
