[tool.poetry]
name = "pySigma-backend-athena"
version = "0.1.0"
description = "pySigma athena backend"
authors = ["Neil Smith <neil@nsmith.net>"]
license = "MIT"
repository = "https://github.com/nsmithuk/pySigma-backend-athena"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.22"

[tool.poetry.group.dev.dependencies]
defusedxml = "^0.7"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
