[project]
name = "pySigma-backend-athena"
dynamic = [ "version", "classifiers" ]
description = "pySigma athena backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["sigma", "pySigma", "athena", "aws"]
authors = [
  { name = "Neil Smith", email = "neil@nsmith.net" },
]


[project.urls]
Homepage = "https://github.com/nsmithuk/pySigma-backend-athena"
Documentation = "https://github.com/nsmithuk/pySigma-backend-athena#readme"
Issues = "https://github.com/nsmithuk/pySigma-backend-athena/issues"
Source = "https://github.com/nsmithuk/pySigma-backend-athena"

[tool.poetry]
version = "0.1.4"
repository = "https://github.com/nsmithuk/pySigma-backend-athena"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.22"

[tool.poetry.group.dev.dependencies]
defusedxml = "^0.7"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
